tdf#146439 retain precise base start pos when using ResolutionIndependentLayout

Change-Id: I16a585abf4805d87a2eeb4e3e9d9bd9f2697b838