vcl/source/outdev/map.cxx
@@ -1835,7 +1835,18 @@ double OutputDevice::LogicWidthToDeviceFontCoordinate(tools::Long nWidth) const
     if (!mbMap)
         return nWidth;
 
-    return ImplLogicToPixel(static_cast<double>(nWidth), mnDPIX, maMapRes.mnMapScNumX, maMapRes.mnMapScDenomX);
+    return ImplLogicToPixel(static_cast<double>(nWidth), mnDPIX,
+                            maMapRes.mnMapScNumX, maMapRes.mnMapScDenomX);
+}
+
+double OutputDevice::LogicXToDeviceFontCoordinate(tools::Long nX) const
+{
+    if (!mbMap)
+        return nX + mnOutOffX;
+
+    return ImplLogicToPixel(static_cast<double>(nX + maMapRes.mnMapOfsX), mnDPIX,
+                            maMapRes.mnMapScNumX, maMapRes.mnMapScDenomX)
+                            + mnOutOffX + mnOutOffOrigX;
 }
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
